--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,107 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:fitsSystemWindows="true"
+    tools:context=".MainActivity"
+    tools:openDrawer="start">
 
-    <LinearLayout
-        android:id="@+id/linearLayout4"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/currentPlayingF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:id="@+id/linearLayout4"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toTopOf="@+id/currentPlayingF"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <ImageView
-                android:id="@+id/allSongsButton"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="?android:selectableItemBackgroundBorderless"
-                android:clickable="true"
-                android:contentDescription="@string/all_songs"
-                android:focusable="true"
-                android:paddingBottom="8dp"
-                app:srcCompat="@drawable/ic_baseline_home_24" />
+                android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/favouritesButton"
+                <ImageView
+                    android:id="@+id/allSongsButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="?android:selectableItemBackgroundBorderless"
+                    android:clickable="true"
+                    android:contentDescription="@string/all_songs"
+                    android:focusable="true"
+                    android:paddingBottom="8dp"
+                    app:srcCompat="@drawable/ic_baseline_home_24" />
+
+                <ImageView
+                    android:id="@+id/playlistButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="?android:selectableItemBackgroundBorderless"
+                    android:clickable="true"
+                    android:contentDescription="@string/playlist"
+                    android:focusable="true"
+                    android:paddingBottom="8dp"
+                    app:srcCompat="@drawable/ic_baseline_library_music_24" />
+
+                <ImageView
+                    android:id="@+id/favouritesButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="?android:selectableItemBackgroundBorderless"
+                    android:clickable="true"
+                    android:contentDescription="@string/favourites"
+                    android:focusable="true"
+                    android:paddingBottom="8dp"
+                    app:srcCompat="@drawable/ic_baseline_favorite_main" />
+
+                <!--                <ImageView-->
+<!--                    android:id="@+id/shuffleButton"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:background="?android:selectableItemBackgroundBorderless"-->
+<!--                    android:clickable="true"-->
+<!--                    android:contentDescription="@string/shuffle"-->
+<!--                    android:focusable="true"-->
+<!--                    android:paddingBottom="8dp"-->
+<!--                    app:srcCompat="@drawable/ic_baseline_arrow_downward_24" />-->
+
+
+<!--                <ImageView-->
+<!--                    android:id="@+id/settingsButton"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:background="?android:selectableItemBackgroundBorderless"-->
+<!--                    android:clickable="true"-->
+<!--                    android:contentDescription="@string/settings"-->
+<!--                    android:focusable="true"-->
+<!--                    android:paddingBottom="8dp"-->
+<!--                    app:srcCompat="@drawable/ic_baseline_settings_24" />-->
+
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/musicRecyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="?android:selectableItemBackgroundBorderless"
-                android:clickable="true"
-                android:contentDescription="@string/favourites"
-                android:focusable="true"
-                android:paddingBottom="8dp"
-                app:srcCompat="@drawable/ic_baseline_favorite_24" />
-
-            <ImageView
-                android:id="@+id/playlistButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="?android:selectableItemBackgroundBorderless"
-                android:clickable="true"
-                android:contentDescription="@string/playlist"
-                android:focusable="true"
-                android:paddingBottom="8dp"
-                app:srcCompat="@drawable/ic_baseline_library_music_24" />
-
-            <ImageView
-                android:id="@+id/shuffleButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="?android:selectableItemBackgroundBorderless"
-                android:clickable="true"
-                android:contentDescription="@string/shuffle"
-                android:focusable="true"
-                android:paddingBottom="8dp"
-                app:srcCompat="@drawable/ic_baseline_arrow_downward_24" />
-
-
-            <ImageView
-                android:id="@+id/settingsButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="?android:selectableItemBackgroundBorderless"
-                android:clickable="true"
-                android:contentDescription="@string/settings"
-                android:focusable="true"
-                android:paddingBottom="8dp"
-                app:srcCompat="@drawable/ic_baseline_settings_24" />
+                android:layout_height="match_parent"
+                android:scrollbarThumbVertical="@drawable/ic_baseline_scrollbar"
+                android:scrollbars="vertical" />
 
         </LinearLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/musicRecyclerView"
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/currentPlayingF"
+            android:name="com.erastusnzula.emuplayer.CurrentPlayingFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout="@layout/fragment_current_playing" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </LinearLayout>
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/currentPlayingF"
-        android:name="com.erastusnzula.emuplayer.CurrentPlayingFragment"
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout="@layout/fragment_current_playing" />
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/nav_menu" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.drawerlayout.widget.DrawerLayout>
