--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -36,13 +36,14 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:contentDescription="@string/active_album"
+                android:maxWidth="300dp"
+                android:maxHeight="300dp"
                 android:minWidth="150dp"
                 android:minHeight="150dp"
-                android:maxHeight="300dp"
-                android:maxWidth="300dp"
+
+                android:padding="8dp"
 
                 android:scaleType="centerCrop"
-
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -66,30 +67,53 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:lines="2"
+                android:maxLines="2"
                 android:text="@string/current_song"
                 android:textSize="16sp"
-                app:layout_constraintBottom_toTopOf="@+id/albumNameA"
+                app:layout_constraintBottom_toTopOf="@+id/linearLayout9"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:ignore="NestedWeights" />
 
-            <TextView
-                android:id="@+id/albumNameA"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:id="@+id/linearLayout9"
+                android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_weight="1"
+                android:orientation="horizontal"
                 android:gravity="center"
-                android:text="@string/song_albulm"
-                android:singleLine="true"
-                android:ellipsize="marquee"
-                android:marqueeRepeatLimit="marquee_forever"
-                android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/currentSongA" />
+                app:layout_constraintTop_toBottomOf="@+id/currentSongA">
+
+                <TextView
+                    android:id="@+id/albumNameA"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:ellipsize="marquee"
+                    android:gravity="center"
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:singleLine="true"
+                    android:text="@string/song_albulm"
+                    android:layout_weight=".9"
+                    android:textSize="16sp" />
+
+                <ImageView
+                    android:id="@+id/favouriteA"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".1"
+                    android:layout_gravity="center"
+                    android:background="?android:selectableItemBackgroundBorderless"
+                    android:clickable="true"
+                    android:contentDescription="@string/favourites"
+                    android:focusable="true"
+                    android:minHeight="24dp"
+                    app:srcCompat="@drawable/ic_baseline_favorite_border_24" />
+            </LinearLayout>
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <LinearLayout
@@ -234,22 +258,6 @@
             android:layout_weight="1"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/favouriteA"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:background="?android:selectableItemBackgroundBorderless"
-                android:clickable="true"
-                android:contentDescription="@string/favourites"
-                android:focusable="true"
-                android:minHeight="24dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/alarmA"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_baseline_favorite_border_24" />
 
             <ImageView
                 android:id="@+id/alarmA"
@@ -264,7 +272,7 @@
                 android:minHeight="24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/equalizerA"
-                app:layout_constraintStart_toEndOf="@+id/favouriteA"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_baseline_alarm_24" />
 
