--- a/app/src/main/res/layout/fragment_current_playing.xml
+++ b/app/src/main/res/layout/fragment_current_playing.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="60dp"
     style="@style/fragmentShape"
     tools:context=".CurrentPlayingFragment">
 
@@ -12,8 +12,10 @@
         android:layout_height="match_parent">
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/fragmentAlbumImage"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:foregroundGravity="center"
+            android:layout_marginStart="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -31,15 +33,16 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_marginStart="8dp">
 
                 <TextView
                     android:id="@+id/fragmentSongName"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:gravity="center_vertical"
-                    android:paddingStart="2dp"
-                    android:paddingEnd="2dp"
+                    android:textSize="18sp"
+                    android:fontFamily="sans-serif-medium"
                     android:ellipsize="marquee"
                     android:marqueeRepeatLimit="marquee_forever"
                     android:singleLine="true"
@@ -49,25 +52,25 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <ImageView
+                <com.google.android.material.imageview.ShapeableImageView
                     android:id="@+id/fragmentPlay"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
-                    android:paddingEnd="10dp"
-                    android:paddingStart="10dp"
-                    android:src="@drawable/ic_baseline_play_circle_filled_24"
+                    android:padding="10dp"
+                    app:shapeAppearanceOverlay="@style/curved_shape_Im"
+                    app:srcCompat="@drawable/ic_baseline_play_circle_filled_24"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/fragmentNext"
                     app:layout_constraintTop_toTopOf="parent"
                     android:contentDescription="@string/fragmentplaybutton" />
 
-                <ImageView
+                <com.google.android.material.imageview.ShapeableImageView
                     android:id="@+id/fragmentNext"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
-                    android:paddingEnd="10dp"
-                    android:paddingStart="10dp"
-                    android:src="@drawable/ic_baseline_skip_next_24"
+                    android:padding="10dp"
+                    app:shapeAppearanceOverlay="@style/curved_shape_Im"
+                    app:srcCompat="@drawable/ic_baseline_skip_next_24"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
