--- a/app/src/main/res/layout/song_view.xml
+++ b/app/src/main/res/layout/song_view.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    app:shapeAppearanceOverlay="@style/curved_shape"
-    app:strokeColor="@color/mainPrimaryColor"
-    app:strokeWidth="1dp"
-    android:padding="2dp"
-    android:layout_marginBottom="2dp"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="5dp"
+    app:cardCornerRadius="15dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -16,8 +13,10 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/albumImage"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginVertical="5dp"
+            android:layout_marginStart="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -37,16 +36,16 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_marginStart="8dp">
 
                 <TextView
                     android:id="@+id/songName"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:gravity="center_vertical"
-                    android:paddingStart="2dp"
-                    android:paddingEnd="5dp"
                     android:singleLine="true"
+                    android:fontFamily="sans-serif-medium"
                     android:text="@string/song_name"
                     android:textSize="16sp"
                     app:layout_constraintBottom_toTopOf="@id/albumName"
@@ -59,8 +58,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:gravity="center_vertical"
-                    android:paddingStart="2dp"
-                    android:paddingEnd="5dp"
                     android:singleLine="true"
                     android:text="@string/song_album_name"
                     android:textSize="14sp"
@@ -87,6 +84,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:padding="8dp"
                 android:text="@string/song_length" />
 
             <ImageView
@@ -94,6 +92,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:padding="8dp"
                 android:contentDescription="@string/more_options"
                 app:srcCompat="@drawable/ic_baseline_more_vert_24" />
         </LinearLayout>
